# crud-pyises

./: README.md  pyproject.toml
app/: app.py  model.py  paises.py  pyises.sqlite  serializer.py
migrations/versions/: ee0a6b387b14_.py
