[tool.poetry]
name = "crud-pyises"
version = "0.1.0"
description = "API com dados de Paises"
authors = ["Gabriel Gradinar <gabrielgradinar@hotmail.com>"]
readme = "README.md"
packages = [{include = "crud_pyises"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
